# libmconn

./: .gitignore  meson.build
include/: libmconn.h
src/: AsyncReader.cpp  AsyncReader.h  MConn.cpp  MConn.h  libmconn.c  meson.build
test/: example.c  meson.build
